fix padding spacing issue

--- a/frontend/app/notification/notificationitem.less
+++ b/frontend/app/notification/notificationitem.less
@@ -27,13 +27,13 @@
     font-weight: 400;
     line-height: 18px;
     opacity: 0.7;
-    margin-bottom: 10px;
 }
 
 .notification-actions {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+    margin-top: 10px;
 
     i {
         margin-left: 3px;
